    - Made the health bio-upgrade's description be more relevant.
    - Reworked values for battery capacity bonuses, increasing the amount you get.
    - Fixed health bio-modules not doubling in amount at the right technology.
    - Fixed the times for solar panel 2 not matching with solar panel 1.
    - Made directly compatable mods be optionally dependent, not hidden optional.
---------------------------------------------------------------------------------------------------
Version: 0.6.168
Date: 2025-05-12
  The cover your butts, nothing was spared for the next update Update:

  Changes:
    - Changes beacons to have 3 module slots, but have 1 distribution efficiency. (was originally for 0.6.500)
    - gave modules their new icons, as seen in 0.6.500 or Moar Modules!

---------------------------------------------------------------------------------------------------
Version: 0.6.167
Date: 2025-04-27
  The i will make borosilicate glass worth it so help me gods Update:

  Fixes:
    - Fixed borosilicate taking more glass then it should. its now 5 glass > 7.5 borosilicate glass.
    - Also fixed borosilicate glass not taking silicon.

---------------------------------------------------------------------------------------------------
Version: 0.6.166
Date: 2025-04-17
  The hell hath no fury like a 4 month-long update that is superpositionly close to being done and not at all done Update:

  Additions:
    - Gave vanadium, chromium and their ferro- versions their 0.6.500 icons. Also inadvertantly fixed their sizes being wrong.

  Changes:
    - Changed strength bio-modules to give 15 extra inventory slots, instead of 12.
    - Nerfed flamethrowers again. burn. with a reasonable amount of damage.

  Fixes:
    - Locale fixes, i swear this is the last one. trust.

---------------------------------------------------------------------------------------------------
Version: 0.6.165
Date: 2025-03-31
  The ignoring my responsibilites by adding new ones Update:
