@@ -176,6 +176,7 @@ Date: 2024-12-08
     - Fixed health bio-modules not doubling in amount at the right technology.
     - Fixed the times for solar panel 2 not matching with solar panel 1.
     - Made directly compatable mods be optionally dependent, not hidden optional.
+    - Corrected the ordering of the fuel subgroup.
 ---------------------------------------------------------------------------------------------------
 Version: 0.6.168
 Date: 2025-05-12
